2019-07-12 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/ctype.h,
	  device/include/pic14/stdlib.h,
	  support/regression/fwk/include/testfwk.h:
	  Minor improvements towards pic14 regression testing suggested by Gonzalo Pérez de Olaguer Córdoba.

2019-07-11 Philipp Klaus Krause <pkk AT spth.de>

	* sdcc/device/lib/pic14/libsdcc/idata.c:
	  Fix missing extern declaration of main.

2019-07-11 Philipp Klaus Krause <pkk AT spth.de>

	* .version:
	  Reflect recent progress on pdk13 by bumping the version number.

2019-07-08 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* sim/ucsim/pdk.src/inst.cc,
	  sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk13/pdk13mch.c,
	  src/pdk/main.c,
	  src/pdk/gen.c:
	  Remove cneqsn for pdk13 fixing bug #2923.

2019-07-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pic14/gen.c:
	  Fixes for bit-fields, from patches by Gonzalo Pérez de Olaguer Córdoba.
	* src/pic14/glue.c:
	  Fixes from patches by Gonzalo Pérez de Olaguer Córdoba.

2019-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/preserves_regs.c:
	  Improve handling of iy, should fix bug #2918.

2019-06-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/ralloc.c,
	  src/hc08/ralloc.c,
	  src/mcs51/ralloc.c,
	  src/ds390/ralloc.c,
	  src/stm8/ralloc.c,
	  src/pdk/ralloc.c,
	  src/pic14/ralloc.c,
	  src/pic16/ralloc.c: fix bug #2920
	* src/hc08/gen.c: fix bug with negative array index

2019-06-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/peeph.def:
	  Add a rule suggested by Free-PDK in RFE #630.
	* sdas/aspdk13/pdk13mch.c:
	  Fix curly brackets.
	* Makefile.in:
	  Fail build if any assembler fails to build.

2019-06-27 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk13/pdk13mch.c:
	  Fix bug #2919 via suggestion by Free-PDK.

2019-06-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Merge pdk branch to trunk.
