@@ -1,3 +1,13 @@
+2019-07-18 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/bug-2363.c:
+	  Disabled a test that won't work on pic14 due to lack of memory.
+
+2019-07-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c:
+	  Improve aop moves (in particular wrt. 16-bit ld)
+
 2019-07-12 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/include/ctype.h,
